[package]
name = "dvm"
description = "discord version manager for linux"
homepage = "https://github.com/diced/dvm"
repository = "https://github.com/diced/dvm.git"
license = "MIT"
version = "1.1.6"
authors = ["diced <pranaco2@gmail.com>"]
edition = "2018"

[[bin]]
name = "dvm"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.6.0", features = ["full"] }
reqwest = { version = "0.11.3", features = ["json", "native-tls", "blocking"], default-features = false }
colored = "2.0.0"
clap = "3.0.0-beta.2"
clap_generate = "3.0.0-beta.2"
