[package]
name = "dvm"
description = "discord version manager for linux"
homepage = "https://github.com/diced/dvm"
repository = "https://github.com/diced/dvm.git"
license = "GPL-3"
version = "1.2.0"
authors = ["diced <pranaco2@gmail.com>"]
edition = "2021"

[[bin]]
name = "dvm"

[dependencies]
tokio = { version = "1.6.0", features = ["full"] }
reqwest = { version = "0.11.3", features = [
    "json",
    "native-tls",
    "blocking",
], default-features = false }
colored = "2.0.0"
clap = { version = "4.4.11", features = ["derive", "color"] }
clap_complete = "4.4.4"
